--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,48 @@
-# Compiled class file
-*.class
+# Node modules
+node_modules/
 
-# Log file
+# Logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# BlueJ files
-*.ctxt
+# OS generated files
+.DS_Store
+Thumbs.db
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Environment files
+.env
+.env.* 
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# React Native
+*.expo
+.expo/
+.expo-shared/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Android
+android/.gradle/
+android/app/build/
+android/.idea/
+android/local.properties
+android/.cxx/
+android/.settings/
+android/build/
+
+# iOS
+ios/Pods/
+ios/DerivedData/
+ios/build/
+ios/*.xcodeproj/*
+ios/*.xcworkspace
+ios/.DS_Store
+ios/*.xcuserstate
+
+# IDEs
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Misc
+coverage/
