--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,37 @@
-# Node modules
+# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+
+# dependencies
 node_modules/
 
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Environment files
-.env
-.env.* 
-
-# React Native
-*.expo
+# Expo
 .expo/
-.expo-shared/
+dist/
+web-build/
+expo-env.d.ts
 
-# Android
-android/.gradle/
-android/app/build/
-android/.idea/
-android/local.properties
-android/.cxx/
-android/.settings/
-android/build/
+# Native
+.kotlin/
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
 
-# iOS
-ios/Pods/
-ios/DerivedData/
-ios/build/
-ios/*.xcodeproj/*
-ios/*.xcworkspace
-ios/.DS_Store
-ios/*.xcuserstate
+# Metro
+.metro-health-check*
 
-# IDEs
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
+# debug
+npm-debug.*
+yarn-debug.*
+yarn-error.*
 
-# Misc
-coverage/
+# macOS
+.DS_Store
+*.pem
+
+# local env files
+.env*.local
+
+# typescript
+*.tsbuildinfo
