--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/slider": "^4.5.7",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~53.0.9",
     "expo-image-picker": "^16.1.4",
+    "expo-notifications": "~0.31.3",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "13.13.5",
-    "@react-native-community/datetimepicker": "8.3.0"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
