--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-jitsi-meet": "^2.3.1",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
