--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-jitsi-meet": "^2.3.1",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^3.18.0",
+    "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.12.0",
@@ -37,5 +38,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
+
   "private": true
 }
